--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>简历 | 吴浩麟</title>
+  <title>简历 | 赖金平</title>
   <link rel="stylesheet" href="main?_inline">
   <base target="_blank">
 </head>
 <body>
-<p class="last-modified">最后更新于2017年9月</p>
+<p class="last-modified">最后更新于2019年3月</p>
 <a class="download-pdf" href="resume.pdf">下载 PDF</a>
 
 <main class="content">
@@ -18,23 +18,23 @@
   <header class="content-hd">
     <section class="title">
       <div class="name">
-        <h1>吴浩麟</h1>
+        <h1>赖金平</h1>
       </div>
       <div class="job">
-        <h2>Web前端开发工程师 | 全栈工程师</h2>
+        <h2>Java初级开发工程师</h2>
       </div>
     </section>
     <section class="info">
       <ul>
-        <li>男 / 1993.10</li>
-        <li>华中师范大学 · 计算机科学与技术</li>
-        <li>本科 / 2016年毕业</li>
+        <li>男 / 1996.07</li>
+        <li>漳州理工学院 · 电气自动化</li>
+        <li>专科 / 2018年7月毕业</li>
       </ul>
     </section>
     <section class="contact">
       <ul>
         <li>
-          <a href="http://wuhaolin.cn">
+          <a href="http://ss.bigehaogao.cn">
             <span class="contact-link">技术博客</span>
             <span class="iconfont">
               <svg width="16px" height="16px" viewBox="0 0 1024 1024">
@@ -45,8 +45,8 @@
           </a>
         </li>
         <li>
-          <a href="https://github.com/gwuhaolin">
-            <span class="contact-link">gwuhaolin</span>
+          <a href="https://github.com/Tomiya">
+            <span class="contact-link">Tomiya</span>
             <span class="iconfont">
               <svg width="16px" height="16px" viewBox="0 0 1024 1024">
                 <path
@@ -56,8 +56,8 @@
           </a>
         </li>
         <li>
-          <a href="mailto:gwuhaolin@icloud.com">
-            <span class="contact-link">gwuhaolin@icloud.com</span>
+          <a href="mailto:laijp_jh@163.com">
+            <span class="contact-link">laijp_jh@163.com</span>
             <span class="iconfont">
               <svg width="16px" height="16px" viewBox="0 0 1024 1024">
                 <path
