--- a/index.html
+++ b/index.html
@@ -55,14 +55,24 @@ a img {
 }
 
 elements-of-type
+
  
+
 (
 html5-block
+
  
+
 ){
 display
+
+
 :
+
+
 block
+
+
 }
 * {
 	-webkit-box-sizing: border-box;
@@ -622,20 +632,7 @@ a {
 							</ul>
 						</div>
 					</div>
-					<div class="item">
-						<header class="item-hd">
-							<h3 class="item-name">柠檬科技工作室</h3>
-							<span class="item-time">2015.09 ~ 2018.06</span><a
-								class="btn item-more">在校</a>
-						</header>
-						<div class="item-bd">
-							<p class="item-des">在校期间创建工作室，担任劳动委员，其中包括：</p>
-							<ul class="section-content">
-								<li><a href="https://github.com/gwuhaolin/myccnu">掌上华师</a>华中师大最大的微信服务号</li>
-								<li><a href="https://github.com/gwuhaolin/ShuXun">书循</a>武汉高校受欢迎的二手教材交易平台</li>
-							</ul>
-						</div>
-					</div>
+					
 				</div>
 			</section>
 			<section class="project">
@@ -677,35 +674,6 @@ a {
 							</ul>
 						</div>
 					</div>
-					<div class="item">
-						<header class="item-hd">
-							<a class="btn item-more" href="https://webpack.js.org">Webpack</a>
-						</header>
-						<div class="item-bd">
-							<ul>
-								<li><a href="http://webpack.wuhaolin.cn/">《深入浅出
-										Webpack》</a>作者</li>
-								<li><a
-									href="https://github.com/gwuhaolin/web-webpack-plugin">web-webpack-plugin</a>webpack插件，可方便的生成HTML与注入资源</li>
-								<li><a href="https://github.com/gwuhaolin/blog/issues/4">webpack原理与实战</a>文章</li>
-								<li><a href="https://github.com/gwuhaolin/blog/issues/2">webpack2
-										终极优化</a>文章</li>
-							</ul>
-						</div>
-					</div>
-					<div class="item">
-						<header class="item-hd">
-							<a class="btn item-more" href="https://nodejs.org">Nodejs</a>
-						</header>
-						<div class="item-bd">
-							<ul>
-								<li><a href="https://github.com/gwuhaolin/blog/issues/7">FinalTest</a>基于headless-chrome的自动化功能测试系统</li>
-								<li><a href="https://github.com/gwuhaolin/chrome-render">chrome-render</a>基于headless-chrome的通用服务端渲染方案</li>
-								<li><a href="https://github.com/gwuhaolin/koa-seo">koa-seo</a>无侵入式SEO单页应用方案，koa中间件</li>
-								<li><a href="https://github.com/gwuhaolin/direct-alipay">direct-alipay</a>支付宝支付服务Nodejs包</li>
-							</ul>
-						</div>
-					</div>
 				</div>
 			</section>
 		</div>
@@ -717,104 +685,100 @@ a {
 					<span class="section-title-r"></span>
 				</header>
 				<div class="section-bd">
+					
 					<div class="item">
 						<header class="item-hd">
-							<span class="item-time">Web</span><a class="btn item-more">精通</a>
+							<span class="item-time">Java</span><a class="btn item-more">熟悉</a>
 						</header>
 						<div class="item-bd">
 							<ul class="section-content">
-								<li>熟知JS基本语法与知识，掌握最新JS语法与API以及TypeScript</li>
-								<li>掌握网页重构所需的CSS、SCSS</li>
-								<li>掌握前端流行框架React、Vue、Angular</li>
-								<li>掌握chrome扩展开发及自动化控制</li>
+								<li>熟练运用JAVA集合、多线程、IO、反射、注解、泛型  熟悉面向对象</li>
+								<li>熟练使用Eclipse/IntelliJ IDEA等开发工具</li>
 							</ul>
 						</div>
 					</div>
 					<div class="item">
 						<header class="item-hd">
-							<span class="item-time">React</span><a class="btn item-more">精通</a>
+							<span class="item-time">Junit</span><a class="btn item-more">熟悉</a>
 						</header>
 						<div class="item-bd">
 							<ul class="section-content">
-								<li>用React开发大型复杂应用，熟知React原理与生态技术栈经验丰富</li>
-								<li>掌握React调试、性能优化、同构、ReactNative等扩展技能</li>
+								<li>使用Junit编写测试代码</li>
 							</ul>
 						</div>
 					</div>
 					<div class="item">
 						<header class="item-hd">
-							<span class="item-time">Webpack</span><a class="btn item-more">精通</a>
+							<span class="item-time">Tomcat</span><a class="btn item-more">熟悉</a>
 						</header>
 						<div class="item-bd">
 							<ul class="section-content">
-								<li>主导和设计了团队多个大型项目的构建与迁移</li>
-								<li>熟知Webpack原理，可以开发复杂的Webpack插件与loader</li>
+								<li>熟悉Tomcat等开源的服务器</li>
 							</ul>
 						</div>
 					</div>
 					<div class="item">
 						<header class="item-hd">
-							<span class="item-time">Nodejs</span><a class="btn item-more">熟练</a>
+							<span class="item-time">框架</span><a class="btn item-more">熟悉</a>
 						</header>
 						<div class="item-bd">
 							<ul class="section-content">
-								<li>掌握Nodejs标准库及模型，在实际项目中多处使用Nodejs</li>
-								<li>用Nodejs开发过服务中间件与其它构建工具</li>
+								<li>熟悉使用(Spring、SpringMVC、MyBatis)SSM、springboot框架</li>
 							</ul>
 						</div>
 					</div>
 					<div class="item">
 						<header class="item-hd">
-							<span class="item-time">Golang</span><a class="btn item-more">熟练</a>
-						</header>
-						<div class="item-bd">
-							<ul class="section-content">
-								<li>掌握golang基本语法与标准库</li>
-								<li>用golang开发过多个服务与库</li>
-							</ul>
-						</div>
-					</div>
-					<div class="item">
-						<header class="item-hd">
-							<span class="item-time">网络协议</span><a class="btn item-more">掌握</a>
-						</header>
-						<div class="item-bd">
-							<ul class="section-content">
-								<li>掌握互联网基本运行机制，TCP与UDP协议</li>
-								<li>掌握HTTP协议，对新版HTTP2也有了解</li>
-							</ul>
-						</div>
-					</div>
-					<div class="item">
-						<header class="item-hd">
-							<span class="item-time">音视频</span><a class="btn item-more">掌握</a>
-						</header>
-						<div class="item-bd">
-							<ul class="section-content">
-								<li>掌握音视频基础概念编解码知识与常见音视频传输协议</li>
-								<li>掌握web直播技术架构与原理</li>
-							</ul>
-						</div>
-					</div>
-					<div class="item">
-						<header class="item-hd">
-							<span class="item-time">数据库</span><a class="btn item-more">掌握</a>
+							<span class="item-time">数据库</span><a class="btn item-more">熟悉</a>
 						</header>
 						<div class="item-bd">
 							<ul class="section-content">
 								<li>掌握关系型数据库基本概念与SQL</li>
-								<li>掌握Postgres、MongoDB、Redis及集群原理与搭建</li>
+								<li>熟练使用MySQL数据库，对常用的sql语句，能熟练地编写</li>
 							</ul>
 						</div>
 					</div>
 					<div class="item">
 						<header class="item-hd">
-							<span class="item-time">其它</span><a class="btn item-more">掌握</a>
+							<span class="item-time">网络协议</span><a class="btn item-more">了解</a>
 						</header>
 						<div class="item-bd">
 							<ul class="section-content">
-								<li>掌握Java、Git、Docker</li>
-								<li>资深Mac用户、资深JetBrains用户、Linux也用的来</li>
+								<li>了解互联网基本运行机制，TCP与UDP协议</li>
+								<li>了解HTTP协议</li>
+							</ul>
+						</div>
+					</div>
+					<div class="item">
+						<header class="item-hd">
+							<span class="item-time">Web</span><a class="btn item-more">了解</a>
+						</header>
+						<div class="item-bd">
+							<ul class="section-content">
+								<li>熟知JS基本语法与知识</li>
+								<li>掌握网页重构所需的CSS</li>
+								<li>XML、HTML、CSS、Javascript（Jquery）、JSON、BootStrap以及
+									AJAX技术的使用</li>
+							</ul>
+						</div>
+					</div>
+					<div class="item">
+						<header class="item-hd">
+							<span class="item-time"></span><a class="btn item-more">证书</a>
+						</header>
+						<div class="item-bd">
+							<ul class="section-content">
+								<li>高级软件工程师</li>
+							</ul>
+						</div>
+					</div>
+					<div class="item">
+						<header class="item-hd">
+							<span class="item-time"></span><a class="btn item-more">自我评价</a>
+						</header>
+						<div class="item-bd">
+							<ul class="section-content">
+								<li>我擅长快速学习新知识，拥有年轻人的朝气蓬勃，做事有责任心，条理性强；易与人相处，对工作充满热情,勤奋好学，敢挑重担，具有很强的团队精神和协调能力。热爱互联网行业，喜欢研究新技术，对待工作一丝不苟。</li>
 							</ul>
 						</div>
 					</div>
@@ -824,8 +788,8 @@ a {
 	</div>
 	</main>
 	<footer class="github-footer">
-		<a class="footer-link" href="https://github.com/gwuhaolin/resume">Host
-			On Github</a>
+		<a class="footer-link" href="https://github.com/taomiya">Host On
+			Github</a>
 	</footer>
 </body>
 </html>
