--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
         </section>
         <section class="contact">
             <ul>
-                <li><a href="https://laitongxue.github.io"><span
+                <li><a href="https://nongfu996.github.io"><span
                         class="contact-link">个人博客</span><span class="iconfont"><svg
                         width="16px" height="16px" viewBox="0 0 1024 1024">
 								<path
